--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>Homework Scheduler</title>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
   </head>
-  <body>
+  <body data-bs-theme="dark">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
